tests/snapshots/integration__integration_tests__security__error_message_with_directive_not_executed.snap
---
source: tests/integration_tests/security.rs
info:
  program: wt
  args:
    - "--internal"
    - switch
    - __WORKTRUNK_EXEC__echo PWNED > /tmp/hacked6
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmph6Ajb4/test-config.toml
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Failed to create worktree: ❌ [31mfatal: invalid reference: __WORKTRUNK_EXEC__echo PWNED > /tmp/hacked6
[0m
